# OOP

./: README.md
Task 1/: CMakeLists.txt  main.cpp
Task 1/inc/: CentralDiff.h  Diff.h  Func.h  LeftDiff.h  RightDiff.h
Task 1/src/: CentralDiff.cpp  Diff.cpp  LeftDiff.cpp  RightDiff.cpp
Task 2/: CMakeLists.txt  main.cpp
Task 2/inc/: Array3D.h
Task 3/: CMakeLists.txt  main.cpp
Task 3/files/: 7.txt  abc5.txt  abc7.txt
Task 3/inc/: ABC.h  Text.h
Task 4/: CMakeLists.txt  main.cpp
Task 4/inc/: Commands.h  Global.h  Key.h  TextConsole.h  VirtualKeyboard.h
Task 5/: CMakeLists.txt  main.cpp
Task 5/inc/: Func.h  INotifyCollectionChanged.h  INotifyPropertyChanged.h  INotifyPropertyChanging.h  MyClassA.h  MyClassB.h  MyCollection.h
Task 6/: CMakeLists.txt  main.cpp
Task 6/Controls/: Button.h  Controls.h  ScrollBar.h  TextBox.h
Task 6/Factory/: Factory.h  LinuxFactory.h  MacOSFactory.h  WinFactory.h
Task 6/Forms/: Form.h  LinuxForm.h  MacOSForm.h  WinForm.h
Task 6/LinuxControls/: LinuxButton.h  LinuxScrollBar.h  LinuxTextBox.h
Task 6/MasOSControls/: MacOSButton.h  MacOSTextBox.h  MacOsScrollBar.h
Task 6/WinControls/: WinButton.h  WinScrollBar.h  WinTextBox.h
Task 6/inc/: Factory.h  LinuxFactory.h  MacOSFactory.h  OS.h  WinFactory.h
Task 7/: CMakeLists.txt  main.cpp
Task 7/inc/: IRepository.h  IUserRepository.h  MemoryRepository.h  MemoryUserRepository.h  User.h
